# PYAc4yDBAdapter

./: setup.cfg
src/ac4y_db_adapter/: __init__.py
src/ac4y_db_adapter/adapter/: postresql.py
src/ac4y_db_adapter/domain/: ac4y_db_adapter_config_parser.py
src/ac4y_db_adapter/domain/algebra/: ac4y_db_adapter_config_parser_algebra.py
