[metadata]
name = ac4y-db-adapter
version = 1.1.20230104.1
author = ac4y
author_email = appcloud4you@gmail.com
description = Ac4y DB adapter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ac4y/PYAc4yDBAdapter
project_urls =
    Bug Tracker = https://github.com/ac4y/PYAc4yDBAdapter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src